--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header__image {
   width: 100%;
 }
-.header .more-inf {
+.header__info {
   font-family: fantasy, cursive;
 }
 
@@ -27,27 +27,28 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task__label,
+.task__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-wrapper {
+.task__wrapper {
   display: flex;
 }
-ul {
+.task__list {
   margin: 0;
   padding: 0px;
 }
-li, 
-h3 {
+.task__item, 
+.task__header {
   list-style: none;
 }
-input,
-button{
+.task__input,
+.task__button{
   outline: none;
 }
-button {
+.task__button {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +57,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.task__button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.task__header {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +70,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +82,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.task__header_add {
   display: block;
   margin: 0 0 20px;
 }
-#new-task {
+.task__input_add {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;  
@@ -104,44 +104,46 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task__input,
+.task__label,
+.task__button {
   vertical-align: middle;
 }
-li > input[type="checkbox"] {
+.task__check {
   margin: 0 10px;
 }
-li > label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task__input {
   width: 226px;
 }
-.delete img {
+.task__button_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+.task__button_delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+.task__list_completed .task__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task__list .task__item .task__input {
   display: none;
 }
-ul .edit-mode input[type=text] {
+.task__list .task__item_edit .task__input {
   display: inline-block;
   width: 224px;
 }
-ul .edit-mode label {
+.task__list .task__item_edit .task__label {
   display: none;
 }
